<resources>
    <string name="app_name">Calendar Marker</string>

    <string name="create_event_title">Create a new event</string>
    <string name="edit_event_title">Edit the event</string>

    <string name="title_string">Title:</string>
    <string name="description_string">Description:</string>
    <string name="color_string">Color:</string>

    <string name="title_description_string">Title...</string>
    <string name="description_description_string">Description...</string>

    <string name="add_event">Add</string>
</resources>
